--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -5,7 +5,7 @@
       <li>
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
-          <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
+          <span><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></span>
         </a>
       </li>
     {% endfor %}
