--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -2,26 +2,22 @@
    <ul>
     <li>
       <a href="{{ site.author.twitter }}" rel="external">
-        {% include icons/twitter.svg %}
-        <span>Follow me on Twitter</span>
+        <img src="/../img/icons/twitter.svg" height="30" width="30" alt="Follow me on Twitter">
       </a>
     </li>
     <li>
       <a href="{{ site.author.github }}" rel="external">
-        {% include icons/github.svg %}        
-        <span>Follow me on GitHub</span>
+        <img src="/../img/icons/github.svg" height="30" width="30" alt="Follow me on GitHub">
       </a>
     </li>
     <li>
       <a href="{{ site.author.linkedin }}" rel="external">
-        {% include icons/linkedin.svg %}        
-        <span>Follow me on LinkedIn</span>
+        <img src="/../img/icons/linkedin.svg" height="32" width="28" alt="Follow me on LinkedIn">
       </a>
     </li>
     <li>
       <a href="{{ site.author.codepen }}" rel="external">
-        {% include icons/codepen.svg %}
-        <span>Follow me on CodePen</span>
+          <img src="/../img/icons/codepen.svg" height="30" width="30" alt="Follow me on CodePen">
       </a>
     </li>
   </ul>
