--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 
-<article class="post" tabindex="0">
+<div class="post" tabindex="0">
  
   <h2 class="post-title">{{ page.title }}</h2>
   
   {% include post-metadata.html %}
 
   {{ content }}  
-</article>
+</div>
 
 {% include share-page.html %}
 
