--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-  <title>{% if page.title == "Home" %}{{ site.title }} &middot; {{ site.tagline }}{% else %}{{ page.title }} &middot; {{ site.title }}{% endif %}</title>
+  <title>{% if page.title == "Home" %}{{ site.title }} - {{ site.tagline }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
   
   <!-- preloadin’ -->
   <link rel="preload" href="{{ site.baseurl }}/css/fonts/Inconsolata/Inconsolata.woff2" as="font" type="font/woff2" crossorigin="">
@@ -46,9 +46,9 @@
   {% endif %}
 
   {% if page.title %}
-    <meta property="og:title" content="{{ page.title }} &middot; {{ site.title }}">
+    <meta property="og:title" content="{{ page.title }} - {{ site.title }}">
   {% else %}
-    <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+    <meta property="og:title" content="{{ site.title }} - {{ site.tagline }}">
   {% endif %}
 
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
@@ -75,9 +75,9 @@
   {% endif %}
 
   {% if page.title %}
-    <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
+    <meta name="twitter:title" content="{{ page.title }} - {{ site.title }}">
   {% else %}
-    <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+    <meta name="twitter:title" content="{{ site.title }} - {{ site.tagline }}">
   {% endif %}
 
   {% if page.description %}
