--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,14 @@
 
   <title>{% if page.title == "Home" %}{{ site.title }} - {{ site.tagline }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
   
-  <!-- preloadin’ -->
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Inconsolata/Inconsolata.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Regular.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Italic.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-BoldItalic.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Semibold.woff2" as="font" type="font/woff2" crossorigin="">
-  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Italic.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-BoldItalic.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Semibold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Inconsolata/Inconsolata.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="{{ site.baseurl }}/css/main.css" as="style"> 
-  
+
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
 
   {% if page.date %}
