--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <header class="masthead">
+      <header class="masthead" role="banner">
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
@@ -28,11 +28,11 @@
         <span>{{ site.tagline }}</span>
       </header>
 
-      <div id="content" role="main" aria-label="Content">
+      <div id="content" role="main" aria-label="main content">
         {{ content }}
       </div>
 
-      <footer>
+      <footer role="contentinfo">
         {% include social-channels.html %}
         <span>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> Matt Smith. All rights reserved.
