--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
-        <div class="row" role="navigation" aria-label="main navigation">
+        <div class="row" role="navigation" aria-label="Main navigation">
           <ul>
             <li>
               <h1 class="masthead-title">
@@ -28,7 +28,7 @@
         <span>{{ site.tagline }}</span>
       </header>
 
-      <div id="content" role="main" aria-label="main content">
+      <div id="content" role="main" aria-label="Main content">
         {{ content }}
       </div>
 
