--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         {{ content }}
       </div>
 
-      <footer role="contentinfo">
+      <footer>
         {% include social-channels.html %}
         <span>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> Matt Smith. All rights reserved.
