--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -2,22 +2,22 @@
    <ul>
     <li>
       <a href="{{ site.author.twitter }}" rel="external">
-        <img src="/../img/icons/twitter.svg" height="30" width="30" alt="Follow me on Twitter">
+        {% include icons/twitter.svg %}
       </a>
     </li>
     <li>
       <a href="{{ site.author.github }}" rel="external">
-        <img src="/../img/icons/github.svg" height="30" width="30" alt="Follow me on GitHub">
+        {% include icons/github.svg %}
       </a>
     </li>
     <li>
       <a href="{{ site.author.linkedin }}" rel="external">
-        <img src="/../img/icons/linkedin.svg" height="32" width="28" alt="Follow me on LinkedIn">
+        {% include icons/linkedin.svg %}
       </a>
     </li>
     <li>
       <a href="{{ site.author.codepen }}" rel="external">
-          <img src="/../img/icons/codepen.svg" height="30" width="30" alt="Follow me on CodePen">
+        {% include icons/codepen.svg %}
       </a>
     </li>
   </ul>
