--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 <div id="disqus_thread"></div>
 <script>
   (function() {
-    var d = document, s = d.createElement('script');
+    let d = document, s = d.createElement('script');
 
     s.src = 'https://allthingssmitty-com.disqus.com/embed.js';
 
