--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -65,7 +65,7 @@ hr {
 
 abbr {
   color: $gray-5;
-  font-size: 85%;
+  font-size: 0.85rem;
   font-weight: bold;
   text-transform: uppercase;
 
@@ -99,7 +99,7 @@ blockquote {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: 0.75rem;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
