--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -133,11 +133,8 @@ a[href^="#fnref:"] {
   margin-top: 2rem;
 }
 
-// Custom type
-//
-// Extend paragraphs with `.lead` for larger introductory text.
-
-.lead {
+// Larger introductory text
+.intro {
   font-size: 1.25rem;
   font-weight: 300;
 }
