--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@ $gray-2: #cfcfcf;
 $gray-3: #68778d;
 $gray-m: #767676;
 $gray-4: #717171;
-$gray-5: #515151;
+$gray-5: #444; //#515151;
 $gray-6: #303030;
 
 $blue: #0074d9;
