--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -2,17 +2,17 @@
   <h4>Share this post</h4>
   <ul>
     <li>
-      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" onclick="window.open(this.href, 'twitter share', 'height=250,width=550');return false;">
+      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Twitter" onclick="window.open(this.href, 'twitter share', 'height=250,width=550');return false;">
         {% include icons/twitter.svg %}
       </a>
     </li>
     <li>
-      <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
+      <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Facebook">
         {% include icons/facebook-official.svg %}
       </a>      
     </li>
     <li>
-      <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
+      <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Reddit">
         {% include icons/reddit.svg %}
       </a>      
     </li>
