--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -1,22 +1,22 @@
 <div class="social">
    <ul>
     <li>
-      <a href="{{ site.author.twitter }}" rel="external">
+      <a href="{{ site.author.twitter }}" rel="external" aria-label="{{ site.author.follow_me_on }} Twitter">
         {% include icons/twitter.svg %}
       </a>
     </li>
     <li>
-      <a href="{{ site.author.github }}" rel="external">
+      <a href="{{ site.author.github }}" rel="external" aria-label="{{ site.author.follow_me_on }} GitHub">
         {% include icons/github.svg %}
       </a>
     </li>
     <li>
-      <a href="{{ site.author.linkedin }}" rel="external">
+      <a href="{{ site.author.linkedin }}" rel="external" aria-label="{{ site.author.follow_me_on }} LinkedIn">
         {% include icons/linkedin.svg %}
       </a>
     </li>
     <li>
-      <a href="{{ site.author.codepen }}" rel="external">
+      <a href="{{ site.author.codepen }}" rel="external" aria-label="{{ site.author.follow_me_on }} CodePen">
         {% include icons/codepen.svg %}
       </a>
     </li>
