--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,7 +20,7 @@ $root-font-family-regular: "BitterRegular", $root-font-family-fallback;
 $root-font-family-bold: "BitterBold", $root-font-family-fallback;
 $root-font-family-italic: "BitterItalic", $root-font-family-fallback;
 $root-font-family-bolditalic: "BitterBoldItalic", $root-font-family-fallback;
-$root-font-size: 100%;
+$root-font-size: 1rem;
 $root-line-height: 1.5;
 
 $body-color: $gray-5;
