--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -71,7 +71,7 @@ img {
 table {
   border: 1px solid $border-color;
   border-collapse: collapse;
-  font-size: 85%;
+  font-size: .85rem;
   margin-bottom: 1rem;
   width: 100%;
 }
