--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -33,7 +33,7 @@ a.pagination-item {
 
 @media only screen and (min-width: 30rem) {
   .pagination {
-    margin: 3rem 0;
+    margin: 3rem 0 1rem;
   }
 
   .pagination-item {
