--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,9 +3,10 @@ layout: default
 title: Tags
 ---
 
-<h2 class="page-title">Tag: {{ page.tag }}</h2>
+<h2 class="page-title">Tags</h2>
 
 <section class="tags">
+  <h3>{{ page.tag }}</h3>
   {% for post in site.tags[page.tag] %}
   <div class="row">
     <span>
