--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -32,8 +32,16 @@ p {
   margin-bottom: 1rem;
   margin-top: 0;
   
-  .emoji {
+  .emoji-md {
     font-size: 1.5rem;
+  }
+
+  .emoji-sm {
+    font-size: 1.25rem;
+  }
+
+  .emoji-x-sm {
+    font-size: 1rem;
   }
 }
 
