--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,14 +9,19 @@
   margin-right: auto;
   max-width: $large-breakpoint;
   min-height: 100vh;
-  // mobile viewport bug fix
-  min-height: -webkit-fill-available;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
 
   @media only screen and (max-width: $large-breakpoint) {
     padding-left:  1rem;
     padding-right: 1rem;
+  }
+
+  // WebKit mobile viewport bug fix
+  @media not all and (min-resolution: .001dpcm) {
+    @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+      min-height: -webkit-fill-available; 
+    }
   }
 }
 
