--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -146,3 +146,23 @@ a[href^="#fnref:"] {
   font-size: 1.25rem;
   font-weight: 300;
 }
+
+// Messages
+//
+// Show alert messages to users. You may add it to single elements like a `<p>`,
+// or to a parent if there are multiple elements to show.
+
+.message {
+  background-color: $sky-blue;
+  border-left: .5rem solid $border-color-blue;
+  color: $gray-4;
+  font-family: $secondary-font-family-semibold;
+  font-size: .9rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+
+  strong {
+    color: $gray-4;
+    font-family: $secondary-font-family-bold;
+  }
+}
