--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -93,12 +93,13 @@
   }
 }
 
+
 // Tags page
 .tags {
   
   h3 {
-    border-top: 1px solid $border-color;
-    padding-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-top: 0;
   }
   
   .row {
