Remove inline style

--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -15,7 +15,7 @@
   <div class="post-tags">
     {% if page.tags.size > 0 or post.tags.size > 0 %}
   
-      <div class="icon icon_small tags_icon" style="background-size: 22px; width: 22px;"></div>
+      <div class="icon icon_small tags_icon"></div>
 
       <ul>
         {% for tag in page.tags %}
