--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,4 +40,8 @@ footer {
   span {
     font-size: .8rem;
   }
+
+  @media only screen and (max-width: $large-breakpoint) {
+    margin-bottom: 1rem;
+  }
 }
