--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -2,18 +2,24 @@
   <h4>Share this post</h4>
   <ul>
     <li>
-      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Twitter" onclick="window.open(this.href, 'twitter share', 'height=250,width=550');return false;">
-        {% include icons/twitter.svg %}
+      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" onclick="window.open(this.href, 'twitter share', 'height=250,width=550');return false;">
+        <div class="icon-social icon-twitter">
+          <div class="sr-hidden">{{ site.author.share_on }} Twitter</div>
+        </div>
       </a>
     </li>
     <li>
-      <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Facebook">
-        {% include icons/facebook-official.svg %}
+      <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
+        <div class="icon-social icon-facebook">
+          <div class="sr-hidden">{{ site.author.share_on }} Facebook</div>
+        </div>
       </a>      
     </li>
     <li>
-      <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" aria-label="{{ site.author.share_on }} Reddit">
-        {% include icons/reddit.svg %}
+      <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
+        <div class="icon-social icon-reddit">
+          <div class="sr-hidden">{{ site.author.share_on }} Reddit</div>
+        </div>
       </a>      
     </li>
   </ul>
