--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   
   <link rel="preload" href="{{ site.baseurl }}/css/main.css" as="style"> 
   <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-Italic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="{{ site.baseurl }}/css/fonts/Bitter/Bitter-BoldItalic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="{{ site.baseurl }}/css/fonts/Open-Sans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
