--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@ $secondary-font-family-semibold: "OpenSansSemibold", $secondary-font-family-fall
 
 $link-color: $blue;
 $border-color: $white-sand;
-$border-color-blue: $link-color;
+$border-color-blue: $blue;
 
 $large-breakpoint: 38rem;
 $large-font-size: 1.25rem;
