Update pagination spacing

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -6,7 +6,7 @@
 .pagination {
   color: $gray-3;
   display: flex;
-  margin: 3rem 0 1rem;  
+  margin: 3rem 0;  
 }
 
 // Pagination items can be `span`s or `a`s
