--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -2,7 +2,7 @@
   <h4>Share this post</h4>
   <ul>
     <li>
-      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" onclick="window.open(this.href, 'twitter share', 'height=250,width=550');return false;">
+      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
         <div class="icon-social icon-twitter">
           <div class="sr-hidden">{{ site.author.share_on }} Twitter</div>
         </div>
