--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,12 +1,12 @@
-<aside class="recent" role="complementary">
-  <h4>Recent posts</h4>
-  <ul class="recent-posts">
+<aside class="related" role="complementary" aria-label="Recent posts"> 
+  <h3>Recent posts</h3>
+  <ul class="related-posts">
     {% for post in site.posts limit:3 %}
       <li>
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
-          <span><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></span>
         </a>
+        <span class="post-date archive-date">{{ post.date | date_to_string }}</span>
       </li>
     {% endfor %}
   </ul>
