--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -39,7 +39,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"] {
   border-radius: .3rem;
-  padding: .125rem;
+  padding: .125rem .25rem;
 }
 
 .token.cdata,
