--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,8 +96,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
   <link rel="manifest" href="{{ site.baseurl }}/img/favicon/manifest.json">
   <link rel="mask-icon" href="{{ site.baseurl }}/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico?v={{ site.time | date: '%s' }}">
-  <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}">
+  <link rel="manifest" href="{{ site.baseurl }}/img/favicon//manifest.webmanifest" />
   <meta name="msapplication-config" content="{{ site.baseurl }}/img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
