--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -22,7 +22,7 @@ pre[class*="language-"]::selection,
 pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
-  background-color: $blue;
+  background-color: #b3d4fc;
   text-shadow: none;
 }
 
