--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -4,21 +4,21 @@
     <li>
       <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
         <div class="icon-social icon-twitter">
-          <div class="sr-hidden">{{ site.author.share_on }} Twitter</div>
+          <div class="sr-hidden">Share this post on Twitter</div>
         </div>
       </a>
     </li>
     <li>
       <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
         <div class="icon-social icon-facebook">
-          <div class="sr-hidden">{{ site.author.share_on }} Facebook</div>
+          <div class="sr-hidden">Share this post on Facebook</div>
         </div>
       </a>      
     </li>
     <li>
       <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
         <div class="icon-social icon-reddit">
-          <div class="sr-hidden">{{ site.author.share_on }} Reddit</div>
+          <div class="sr-hidden">Share this post on Reddit</div>
         </div>
       </a>      
     </li>
