--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -3,28 +3,28 @@
     <li>
       <a href="{{ site.author.twitter }}" rel="external">
         <div class="icon-social icon-twitter">
-          <div class="sr-hidden">{{ site.author.follow_me_on}} Twitter</div>
+          <div class="sr-hidden">Follow me on Twitter</div>
         </div>
       </a>
     </li>
     <li>
       <a href="{{ site.author.linkedin }}" rel="external">
         <div class="icon-social icon-linkedin">
-          <div class="sr-hidden">{{ site.author.follow_me_on}} LinkedIn</div>
+          <div class="sr-hidden">Follow me on LinkedIn</div>
         </div>
       </a>
     </li>
     <li>
       <a href="{{ site.author.github }}" rel="external">
         <div class="icon-social icon-github">
-          <div class="sr-hidden">{{ site.author.follow_me_on}} GitHub</div>
+          <div class="sr-hidden">Follow me on GitHub</div>
         </div>
       </a>
     </li>
     <li>
       <a href="{{ site.author.codepen }}" rel="external">
         <div class="icon-social icon-codepen">
-          <div class="sr-hidden">{{ site.author.follow_me_on}} CodePen</div>
+          <div class="sr-hidden">Follow me on CodePen</div>
         </div>
       </a>
     </li>
